# multimoon

./: Cargo.toml  README.md  RELEASES.md
.github/workflows/: build.yml
src/: cmdline.rs  common.rs  core.rs  global.rs  main.rs  prelude.rs  registry.rs  toolchain.rs
src/installer/: inst_initial.rs  mod.rs
src/subcommand/: core.rs  mod.rs  toolchain.rs
