[package]
name = "multimoon"
version = "0.1.1"
edition = "2021"
authors = ["Lone Outpost Tech <oss@loneoutpost.cn>"]
description = "MultiMoon - an installer of MoonBit language toolchain."
license = "Apache-2.0"
repository = "https://github.com/lone-outpost-oss/multimoon"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tempdir = "0.3"
reqwest = { version = "0.12.4", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "rustls-tls-native-roots",
] }
url = "2.5.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
dirs = "5"
sha2 = "0.10.8"
chrono = "0.4.38"
filetime = "0.2.23"
walkdir = "2"
base16ct = { version = "0.2.0", features = ["alloc"] }
xz2 = "0.1"
zip = { version = "1.2.3", default-features = false, features = [
    "aes-crypto", 
    "deflate", 
    "deflate-zlib", 
    "deflate-zopfli", 
    "bzip2", 
    "time",
    "zstd",
] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[target.'cfg(unix)'.dependencies]
